--- a/shanoir-ng-front/src/app/shared/side-menu/side-menu.component.css
+++ b/shanoir-ng-front/src/app/shared/side-menu/side-menu.component.css
@@ -1,7 +1,7 @@
 :host() { height: 100vh; background-color: var(--color-a); color: white; }
 :host()::-webkit-scrollbar { width: 0 !important }
 
-.logo { overflow: hidden; margin-bottom: 20px; display: flex; justify-content: center; min-width: 300px; position: relative; }
+.logo { margin-bottom: 20px; display: flex; justify-content: center; min-width: 300px; position: relative; }
 
 .logo img { height: 78px; opacity: 0.2; margin-top: 4px;
     -webkit-filter: drop-shadow(0px -3px 0px rgba(0,0,0,.9)); 
@@ -31,7 +31,7 @@ a:hover, a:active { color: white; }
 .chevron i { margin-top: 7px; }
 .notif { font-size: 10px; }
 
-.user, .logo, .menu-list { float: right; }
+.user, .logo, .menu-list, .bottom-info { float: right; }
 
 progress-bar { width: 100px; }
 
